# calibre-ftfy

./: .gitignore  README.md  __init__.py  bundle_release.sh  main.py  pyproject.toml  vendor_deps.sh
