[tool.poetry]
name = "calibre-ftfy"
version = "1.0.0"
description = "Calibre plugin for running the ftfy tool on book text to fix encoding and other Unicode errors"
authors = ["Scott Stephens <stephens.js@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8.1"
ftfy = "^6.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
